<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vassiliki.agony.MainActivity">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/direct_title"
                android:text="@string/direct_title"/>
            <ListView
                android:id="@+id/peers1"
                android:layout_marginTop="20dp"
                android:minWidth="50dp"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:minHeight="50dp"
                android:background="#00FF00"
                android:drawSelectorOnTop="false"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_2"
                android:id="@+id/game_for_2"
                android:layout_gravity="center"
                android:enabled="false"
                android:onClick="updatePeers" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/invitations"
                android:text="@string/invitations"/>
            <ListView
                android:id="@+id/peers2"
                android:layout_marginTop="20dp"
                android:minWidth="60dp"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:minHeight="50dp"
                android:background="#00FF00"
                android:drawSelectorOnTop="false"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/refresh"
                android:layout_gravity="center"
                android:id="@+id/button"
                android:onClick="discoverService"
                android:enabled="true" />
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/invitation_title"
                android:id="@+id/title"/>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/players_2"
                    android:onClick="players2"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/players_3"
                    android:onClick="players3"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/players_4"
                    android:onClick="players4"/>
            </RadioGroup>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/create_g"
                android:id="@+id/creategroup"
                android:onClick="create_group1"
                android:enabled="false"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
