<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/game"
    tools:context="com.example.vassiliki.agony.PlayGame">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/players">
                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/players_layout">
                    <TableRow
                        android:id="@+id/cards_row">
                    </TableRow>
                    <TableRow
                        android:id="@+id/players_row">
                    </TableRow>
                </TableLayout>
            </HorizontalScrollView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/playing"
                        android:text="PLAY"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pass"
                        android:onClick="pass_the_turn"
                        android:text="pass"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/not_play_7"
                        android:onClick="play_not_7"
                        android:text="PLAY SOMETHING ELSE"/>
                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/face_up_card"
                    android:contentDescription="@string/desc"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/face_down_pale"
                    android:src="@drawable/front"
                    android:onClick="pickACard"
                    android:layout_marginEnd="3dp"
                    android:contentDescription="@string/desc2"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/signs"
                android:layout_marginTop="7dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suitsign"
                    android:id="@+id/suit_sign1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/suit_sign2"/>
            </LinearLayout>
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/suit_sign"
                android:layout_marginTop="5dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/clubs_button"
                        android:layout_marginStart="10dp"
                        android:onClick="change_suit_to_clubs"
                        android:text="@string/suits_clubs"
                        android:textSize="12sp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/spades_button"
                        android:layout_marginStart="10dp"
                        android:text="@string/suits_spades"
                        android:onClick="change_suit_to_spades"
                        android:textSize="12sp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/diamonds_button"
                        android:layout_marginStart="10dp"
                        android:onClick="change_suit_to_diamonds"
                        android:text="@string/suits_diamonds"
                        android:textSize="12sp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/hearts_button"
                        android:onClick="change_suit_to_hearts"
                        android:layout_marginStart="10dp"
                        android:text="@string/suits_hearts"
                        android:textSize="12sp"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ok_button"
                        android:onClick="ok_change"
                        android:layout_marginStart="10dp"
                        android:text="@string/suits_ok"
                        android:textSize="12sp"/>
                </LinearLayout>
            </HorizontalScrollView>
            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:id="@+id/players_cards">
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
